Made some small wording changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="homepage-hero">
         <div class="content-wrapper">
-            <h1>Jubilee Austen</h1>
+            <h1>Bryan Hoyem</h1>
             <nav>
                 <ul>
                     <li><a href="#about">about</a></li>
@@ -87,7 +87,7 @@
                 <p>
                     <a href="mailto:hi@jubileeausten.com" id="contact-email"><img src="img/envelope.png" alt="envelope"
                             id="email-envelope">
-                        &nbsp;hi@JubileeAusten.com
+                        &nbsp;bjhoyem@gmail.com
                     </a>
                 </p>
                 <h3>Or, follow me on social media:</h3>
